--- a/L201/index.html
+++ b/L201/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- page content -->
+  <script src=123.js></script>
   </body>
 </html>
