--- a/L202/index.html
+++ b/L202/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- page content -->
+  <script src="321.js"></script>
   </body>
 </html>
