--- a/L203/index.html
+++ b/L203/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- page content -->
+<script src="231.js"></script>
   </body>
 </html>
