--- a/L204/index.html
+++ b/L204/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- page content -->
+    <script src="3333.js"></script>
   </body>
 </html>
