--- a/L205/index.html
+++ b/L205/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- page content -->
+   <script src="555.js"></script>
   </body>
 </html>
